# IFGF2D

./: CMakeLists.txt  README.md
ForwardMap/: ForwardMap.hpp  ForwardMap.tpp  GreenFunctions.hpp  LinearOperator.cpp  LinearOperator.hpp  opGMRES.hpp
Geometry/: ClosedCurve.cpp  ClosedCurve.hpp  Curve.cpp  Curve.hpp  Obstacles.cpp  Obstacles.hpp  Patch.cpp  Patch.hpp  Patch.tpp  Patches.cpp  Patches.hpp
IFGF-2D/: BoxTree.h  Interpolator.h  Level.h  main.cpp
IFGF_Source/: BoxTree.h  Chebyshev.h  Interpolator.h  Level.h  PolarCoordinates.h  README.md  Vector.h  a.out  main.cpp
complex_bessel-master/: build.sh
source/: BoxTree.h  Chebyshev.h  Interpolator.h  Level.h  PolarCoordinates.h  Vector.h
tests/ForwardMap/: ComputeAx.cpp  InitializeForwardMap.cpp  SinglePointSingCoeffs.cpp  SolveAndPropagate.cpp
tests/Geometry/: BoundingBoxTests.cpp  ClosedCurvePatchSplitting.cpp  ComputeBoundingBoxTests.cpp
tests/IFGF/: IgnoreSingNSing.cpp  Scaling.cpp
tests/utils/: Cheb1d_test.cpp  SingularIntegral.cpp
utils/: BrentsMethod.hpp  Chebyshev1d.hpp  DebugUtils.hpp  Quadrature.hpp  Rhs.hpp  chebyshev.hpp  quadrature.hpp
